# led3score

./: .gitignore  Makefile  README.md  condaenvironment.yaml  pyproject.toml
1_route_planning/analysis/: 01_create_chembl200k.ipynb  02_1_extract_caspyrus_results.py  02_2_extract_chembl_results.py  03_analyse_results.ipynb
1_route_planning/led3/: led3_azf_config.yml
1_route_planning/led3/caspyrus_50k/splitted/: README.md  splitted_datasets.txt
1_route_planning/led3/chembl_200k/splitted/: splitted_datasets.txt
1_route_planning/zinc/: zinc_azf_config.yml
2_synthesis_score/0_test_set_generation/: 0_chembl200k_test_set_generation.py  2_extract_chembl_results.py  3_check_differences.ipynb  extract_results.txt
2_synthesis_score/1_hyperparameter_optimization/: 0_split_datasets.ipynb
2_synthesis_score/1_hyperparameter_optimization/zinc_building_blocks/: Makefile
2_synthesis_score/2_evaluation/: evaluate_models.ipynb  visualize_results.ipynb
3_molecular_generation/1_generate_molecules/: .gitignore  FT.ipynb  README.md  RL.ipynb  RL_analysis_overall.ipynb  RL_generate.ipynb  RL_initial.ipynb  RL_run.py  env.yml  filtering.ipynb  predictors.py  qsub.sh  requirements.txt  settings.py  utils.py
4_wetlab/evaluate_possible_ligands/led3_building_blocks/: led3_azf_config.yml
5_paper/: paper_supplementary.ipynb  paper_visualization_1.ipynb  paper_visualization_2.ipynb  paper_visualization_3.ipynb
5_paper/cluster_size_analysis/: analysis.ipynb
src/led3_score/fingerprints/: fingerprint_generator.py  fingerprints.py  molecular_properties.py
(+87 files in other folders)
